# stpp-e2e-mlops

./: Dockerfile.backend  README.md  config.py  docker-compose.yml  dvc.yaml  main.py  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: cd-ecr.yml  ci.yml
artifacts/reports/: dataset_profile.json
backend/: app.py
configs/: project.yaml
docs/: roadmap.md
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/predict/: route.ts
src/data/: __init__.py  ingest.py  validate.py
src/inference/: __init__.py  sklearn_predictor.py
src/monitoring/: __init__.py  drift.py
src/training/: train.py
src/utils/: __init__.py  params.py
tests/: test_api.py  test_data_pipeline.py
